# bvtools

./: .gitignore  pyproject.toml
bvtools/: argtools.py  functoolz.py  itertoolz.py  misc.py  pdf.py  polars.py
