[tool.poetry]
name = "bvtools"
version = "0.1.2"
description = "A collection of tools"
authors = ["Torstein Sørnes <t.soernes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
betterpathlib = "^0.1.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
stackprinter = "^0.2.12"


[tool.poetry.group.cli.dependencies]
fire = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
